# sanabau-call-center

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  keys.py  mail_sender.py  main.py  pyproject.toml
libs/: helpers.py  mail_sender.py  models.py  services.py  sheets.py
resources/: confirmation-client.html  notification-sanabau.html  prompt1.md
resources/temp/: email_0d70cgrq.html  email_0ljbzm3s.html  email_1nc0rt1x.html  email_fsmtovxh.html  email_jiltimle.html  email_oajuce4s.html  email_u5f5hl6d.html
